--- a/mvvmlibrary/build.gradle
+++ b/mvvmlibrary/build.gradle
@@ -16,6 +16,12 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
