--- a/mvvmlibrary/build.gradle
+++ b/mvvmlibrary/build.gradle
@@ -40,50 +40,50 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    api 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
     //自定义Toast
-    implementation 'com.hjq:toast:8.0'
+    api 'com.hjq:toast:8.0'
 
-    implementation 'com.kingja.loadsir:loadsir:1.3.8'
+    api 'com.kingja.loadsir:loadsir:1.3.8'
 
     //刷新头
-    implementation 'androidx.appcompat:appcompat:1.1.0'                 //必须 1.0.0 以上
-    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.1'      //核心必须依赖
-    implementation  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
+    api 'androidx.appcompat:appcompat:1.1.0'                 //必须 1.0.0 以上
+    api  'com.scwang.smart:refresh-layout-kernel:2.0.1'      //核心必须依赖
+    api  'com.scwang.smart:refresh-header-classics:2.0.1'    //经典刷新头
 
     //baseRecycleView
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
 
     //轮播图
-    implementation 'com.youth.banner:banner:2.0.8'
+    api 'com.youth.banner:banner:2.0.8'
 
     //Jetpack组件
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.0-alpha03"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha03"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha03"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha03"
-    implementation "com.google.android.material:material:1.3.0-alpha01"
+    api "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    api "androidx.lifecycle:lifecycle-common-java8:2.3.0-alpha03"
+    api "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+    api "androidx.lifecycle:lifecycle-livedata:2.2.0"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha03"
+    api "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha03"
+    api "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha03"
+    api "com.google.android.material:material:1.3.0-alpha01"
 
     //retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    api 'com.squareup.retrofit2:retrofit:2.9.0'
+    api 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    api 'com.squareup.retrofit2:converter-gson:2.8.1'
     //okhttp3
-    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    api 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     // HttpLogging
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
+    api 'com.squareup.okhttp3:logging-interceptor:3.12.0'
 
 
     //autosize
-    implementation 'me.jessyan:autosize:1.1.2'
+    api 'me.jessyan:autosize:1.1.2'
 
-    implementation "io.reactivex.rxjava2:rxjava:2.2.13"
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    api "io.reactivex.rxjava2:rxjava:2.2.13"
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
+    api 'com.squareup.retrofit2:converter-gson:2.8.1'
 }
